packages/fuels-macros/tests/ui/setup_program_test/duplicate_wallet_names.stderr
error: original defined here:
 --> tests/ui/setup_program_test/duplicate_wallet_names.rs:4:13
  |
4 |     Wallets("wallet1", "wallet1"),
  |             ^^^^^^^^^

error: duplicate!
 --> tests/ui/setup_program_test/duplicate_wallet_names.rs:4:24
  |
4 |     Wallets("wallet1", "wallet1"),
  |                        ^^^^^^^^^
